--- a/calculators_examples/exe_1/vanilla-tilt_files/translate_un.html
+++ b/calculators_examples/exe_1/vanilla-tilt_files/translate_un.html
@@ -1,3 +1,15 @@
-
 <!-- saved from url=(0181)https://translate.google.com/translate_un?sl=en&tl=pt&u=https://raw.githubusercontent.com/micku7zu/vanilla-tilt.js/master/dist/vanilla-tilt.js&usg=ALkJrhg7-284T79nbd4jK0nP5HipJXJxGg -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script>if (window.parent && window.parent.parent == window.top) {window.top.gtcomm._updaten('en','Inglês','pt','','https://raw.githubusercontent.com/micku7zu/vanilla-tilt.js/master/dist/vanilla-tilt.js');}</script></head><body data-new-gr-c-s-loaded="14.1007.0"></body></html>
+<html>
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <script>if (window.parent && window.parent.parent == window.top) {
+            window.top.gtcomm._updaten('en', 'Inglês', 'pt', '',
+                'https://raw.githubusercontent.com/micku7zu/vanilla-tilt.js/master/dist/vanilla-tilt.js');
+        }
+    </script>
+</head>
+
+<body data-new-gr-c-s-loaded="14.1007.0"></body>
+
+</html>
