--- a/hangman game/index.html
+++ b/hangman game/index.html
@@ -10,34 +10,64 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
-                <img id="imgforca" src="/assets/img/forca.png" alt="">
+    <div class="container">
+        <div>
+            <img id="imgforca" src="/assets/img/forca.png" alt="">
+        </div>
+
+        <div class="pSecreta fonte6">
+             <div class="letra"> A </div>
+             <div class="letra"> A </div>
+             <div class="letra"> A </div>
+             <div class="letra"> A </div>
+             <div class="letra"> A </div>
+             <div class="letra"> A </div>
+             <div class="letra"> A </div>
+             <div class="letra"> A </div>
+             <div class="letra"> A </div>
+        </div>
+
+        <div class="categoria fonte4">
+            <p>Categoria:</p>
+        </div>
+
+        <div class="teclado">
+            <div class="teclas">
+                <button id="tecla_Q">Q</button>
+                <button id="tecla_W">W</button>
+                <button id="tecla_E">E</button>
+                <button id="tecla_R">R</button>
+                <button id="tecla_T">T</button>
+                <button id="tecla_Y">Y</button>
+                <button id="tecla_U">U</button>
+                <button id="tecla_I">I</button>
+                <button id="tecla_O">O</button>
+                <button id="tecla_P">P</button>
+            </div>
+            <div class="teclas">
+                <button id="tecla_A">A</button>
+                <button id="tecla_S">S</button>
+                <button id="tecla_D">D</button>
+                <button id="tecla_F">F</button>
+                <button id="tecla_G">G</button>
+                <button id="tecla_H">H</button>
+                <button id="tecla_J">J</button>
+                <button id="tecla_K">K</button>
+                <button id="tecla_L">L</button>
+                <button id="tecla_Ç">Ç</button>
+            </div>
+            <div class="teclas">
+                <button id="tecla_Z">Z</button>
+                <button id="tecla_X">X</button>
+                <button id="tecla_C">C</button>
+                <button id="tecla_V">V</button>
+                <button id="tecla_B">B</button>
+                <button id="tecla_N">N</button>
+                <button id="tecla_M">M</button>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-2"></div>
-            <div class="col-8">
-
-            </div>
-            <div class="col-2"></div>
-        </div>
-
-        <div class="row">
-            <div class="col-12">
-
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-12">
-
-            </div>
-        </div>
-
-        
+  
 
     </div>
 
