--- a/hangman game/index.html
+++ b/hangman game/index.html
@@ -15,16 +15,16 @@
             <img id="imgforca" src="/assets/img/forca.png" alt="">
         </div>
 
-        <div class="pSecreta fonte6">
-             <div class="letra"> A </div>
-             <div class="letra"> A </div>
-             <div class="letra"> A </div>
-             <div class="letra"> A </div>
-             <div class="letra"> A </div>
-             <div class="letra"> A </div>
-             <div class="letra"> A </div>
-             <div class="letra"> A </div>
-             <div class="letra"> A </div>
+        <div class="palavraSecreta fonte6">
+            <div class="letra"> A </div>
+            <div class="letra"> A </div>
+            <div class="letra"> A </div>
+            <div class="letra"> A </div>
+            <div class="letra"> A </div>
+            <div class="letra"> A </div>
+            <div class="letra"> A </div>
+            <div class="letra"> A </div>
+            <div class="letra"> A </div>
         </div>
 
         <div class="categoria fonte4">
@@ -67,7 +67,7 @@
             </div>
         </div>
 
-  
+
 
     </div>
 
@@ -75,6 +75,9 @@
 
 
 
+
+
+    
     <script src="/assets/js/script.js"></script>
 </body>
 
