--- a/hangman game/index.html
+++ b/hangman game/index.html
@@ -11,19 +11,9 @@
 
 <body>
     <div class="container">
-        <div>
-            <img id="imgforca" src="/assets/img/forca.png" alt="">
-        </div>
+        <div id="imagemForca"></div>
 
         <div class="palavraSecreta fonte6">
-            <div class="letra"> A </div>
-            <div class="letra"> A </div>
-            <div class="letra"> A </div>
-            <div class="letra"> A </div>
-            <div class="letra"> A </div>
-            <div class="letra"> A </div>
-            <div class="letra"> A </div>
-            <div class="letra"> A </div>
             <div class="letra"> A </div>
         </div>
 
@@ -66,9 +56,6 @@
                 <button id="tecla_M">M</button>
             </div>
         </div>
-
-
-
     </div>
 
 
@@ -77,7 +64,7 @@
 
 
 
-    
+
     <script src="/assets/js/script.js"></script>
 </body>
 
