--- a/hangman game/index.html
+++ b/hangman game/index.html
@@ -13,47 +13,46 @@
     <div class="container">
         <div id="imagemForca"></div>
 
-        <div class="palavraSecreta fonte6">
-            <div class="letra"> A </div>
-        </div>
+        <div class="palavraSecreta fonte6" id="palavraSecreta"></div>
 
-        <div class="categoria fonte4">
-            <p>Categoria:</p>
-        </div>
+        <div class="categoria fonte4" id="categoria"></div>
 
         <div class="teclado">
             <div class="teclas">
-                <button id="tecla_Q">Q</button>
-                <button id="tecla_W">W</button>
-                <button id="tecla_E">E</button>
-                <button id="tecla_R">R</button>
-                <button id="tecla_T">T</button>
-                <button id="tecla_Y">Y</button>
-                <button id="tecla_U">U</button>
-                <button id="tecla_I">I</button>
-                <button id="tecla_O">O</button>
-                <button id="tecla_P">P</button>
+                <button id="tecla_Q" onclick="verificarLetra('Q')">Q</button>
+                <button id="tecla_W" onclick="verificarLetra('W')">W</button>
+                <button id="tecla_E" onclick="verificarLetra('E')">E</button>
+                <button id="tecla_R" onclick="verificarLetra('R')">R</button>
+                <button id="tecla_T" onclick="verificarLetra('T')">T</button>
+                <button id="tecla_Y" onclick="verificarLetra('Y')">Y</button>
+                <button id="tecla_U" onclick="verificarLetra('U')">U</button>
+                <button id="tecla_I" onclick="verificarLetra('I')">I</button>
+                <button id="tecla_O" onclick="verificarLetra('O')">O</button>
+                <button id="tecla_P" onclick="verificarLetra('P')">P</button>
             </div>
             <div class="teclas">
-                <button id="tecla_A">A</button>
-                <button id="tecla_S">S</button>
-                <button id="tecla_D">D</button>
-                <button id="tecla_F">F</button>
-                <button id="tecla_G">G</button>
-                <button id="tecla_H">H</button>
-                <button id="tecla_J">J</button>
-                <button id="tecla_K">K</button>
-                <button id="tecla_L">L</button>
-                <button id="tecla_Ç">Ç</button>
+                <button id="tecla_A" onclick="verificarLetra('A')">A</button>
+                <button id="tecla_S" onclick="verificarLetra('S')">S</button>
+                <button id="tecla_D" onclick="verificarLetra('D')">D</button>
+                <button id="tecla_F" onclick="verificarLetra('F')">F</button>
+                <button id="tecla_G" onclick="verificarLetra('G')">G</button>
+                <button id="tecla_H" onclick="verificarLetra('H')">H</button>
+                <button id="tecla_J" onclick="verificarLetra('J')">J</button>
+                <button id="tecla_K" onclick="verificarLetra('K')">K</button>
+                <button id="tecla_L" onclick="verificarLetra('L')">L</button>
+                <button id="tecla_Ç" onclick="verificarLetra('Ç')">Ç</button>
             </div>
             <div class="teclas">
-                <button id="tecla_Z">Z</button>
-                <button id="tecla_X">X</button>
-                <button id="tecla_C">C</button>
-                <button id="tecla_V">V</button>
-                <button id="tecla_B">B</button>
-                <button id="tecla_N">N</button>
-                <button id="tecla_M">M</button>
+                <button id="tecla_Z" onclick="verificarLetra('Z')">Z</button>
+                <button id="tecla_X" onclick="verificarLetra('X')">X</button>
+                <button id="tecla_C" onclick="verificarLetra('C')">C</button>
+                <button id="tecla_V" onclick="verificarLetra('V')">V</button>
+                <button id="tecla_B" onclick="verificarLetra('B')">B</button>
+                <button id="tecla_N" onclick="verificarLetra('N')">N</button>
+                <button id="tecla_M" onclick="verificarLetra('M')">M</button>
+                <a href="">
+                    <img id="reiniciar" src="/assets/img/restart.png">
+                </a>
             </div>
         </div>
     </div>
