--- a/hangman game/index.html
+++ b/hangman game/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ebony Sys - Forca</title>
     <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
@@ -51,20 +53,42 @@
                 <button id="tecla_N" onclick="verificarLetra('N')">N</button>
                 <button id="tecla_M" onclick="verificarLetra('M')">M</button>
                 <a href="">
-                    <img id="reiniciar" src="/assets/img/restart.png">
+                    <img id="btnReiniciar" src="/assets/img/restart.png">
                 </a>
             </div>
         </div>
     </div>
 
-
-
-
-
-
+    <!-- Modal -->
+    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-body stylemodal" id="modaltxt"></div>
+                <div class="modal-footer stylemodal d-flex justify-content-center">
+                    <button type="button" class="btn" data-dismiss="modal">Fechar</button>
+                    <button type="button" class="btn">
+                        <a href="https://www.linkedin.com/in/leonardo-alves-7b5aa5152/" target="blank">Ebony</a>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script src="/assets/js/script.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="sweetalert2.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
